fix: email overflow

--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -553,7 +553,7 @@ strong {
   border-right: 1px solid var(--border-color);
   color: var(--secondary-color);
   font-weight: var(--font-weight-bold);
-  min-width: 140px;
+  min-width: 120px;
   margin-right: 10px;
   padding: 13px 30px;
   display: inline-block;
